2005-09-05  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Added some linker switches to ARCH_OPAL_LIBS for
	mingw.

2005-09-05  Julien Puydt  <jpuydt@free.fr>

	* src/Makefile.am: Modified the _LDADD so GNOMEMEETING_LIBS comes
	after libgnomemeeting... helps linking on insane systems.

2005-08-31  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Added mingw to the list of supported OS types,
	although it isn't quite true.

2005-08-31  Julien Puydt  <jpuydt@free.fr>

	* src/endpoint.cpp, src/sipendpoint.cpp, src/h323endpoint.cpp: Renamed
	some variables from 'interface' to 'iface', since it confuses some
	compilers.

2005-08-30  Julien Puydt  <jpuydt@free.fr>

	* src/ils.h: Defined LDAP_DEPRECATED, since what gnomemeeting uses
	is in the next version.
	* src/ils.cpp: Removed #include <ldap.h> since ils.h already does it.

2005-08-30  Julien Puydt  <jpuydt@free.fr>

	* src/pref_window.cpp: Renamed struct _GmPreferencesWindow's interface
	member to iface, since it seems confusing for some compilers.

2005-08-30  Julien Puydt  <jpuydt@free.fr>

	* lib/Makefile.am: Compile eggtrayicon.[ch] only when gnome isn't
	disabled (could probably be done better).

2005-08-30  Julien Puydt  <jpuydt@free.fr>

	* src/common.h: Remove #ifdef WIN32 cruft.

2005-08-25  Julien Puydt  <jpuydt@free.fr>

	* configure.in, src/vfakeio.h, src/vfakeio.cpp: Remove the dependancy
	on gnome-vfs.

2005-08-25  Julien Puydt  <jpuydt@free.fr>

	* lib/stats_drawing_area.c: Use g_malloc0/g_free instead of
	malloc/free. Fixes a warning.

2005-08-25  Julien Puydt  <jpuydt@free.fr>

	* lib/gm_conf-glib.c: Include <stdio.h>, since it's needed. Fixes a
	warning.

2005-08-25  Julien Puydt  <jpuydt@free.fr>

	* lib/gm_conf-glib.c(database_load_file): Changed the guchar buffer
	into gchar buffer. Fixes signedness warnings.

2005-08-25  Julien Puydt  <jpuydt@free.fr>

	* lib/gm_conf-glib.c, lib/gnome_prefs_window.c: Changed use of strlen
	to g_utf8_strlen.

2005-08-25  Julien Puydt  <jpuydt@free.fr>
